--- a/frontend/src/assets/css/message.css
+++ b/frontend/src/assets/css/message.css
@@ -288,7 +288,7 @@ div[data-placeholder]:not([data-placeholder=""]):empty::before {
     }
 
 .re-post {
-    width: 100%;
+    display: inline-block;
     padding: 5px;
     border-radius: 10px;
     box-shadow: 0 0 5px #363E3E;
@@ -305,6 +305,7 @@ div[data-placeholder]:not([data-placeholder=""]):empty::before {
 
 .re-post img {
     width: 100%;
+    max-height: 500px;
     border-radius: 10px;
     object-fit: cover;
 }
@@ -316,6 +317,7 @@ div[data-placeholder]:not([data-placeholder=""]):empty::before {
 .full img {
     width: auto;
     height: 80%;
+    max-height: none;
     position: fixed;
     z-index: 25;
     top: 0;
