--- a/frontend/src/assets/css/carousel.css
+++ b/frontend/src/assets/css/carousel.css
@@ -179,7 +179,7 @@ height:0;
     }
 
     .container.base-container {
-        margin-top: 50px;
+        margin-top: 0;
         padding: 0;
     }
 
