--- a/frontend/src/assets/css/message.css
+++ b/frontend/src/assets/css/message.css
@@ -37,10 +37,12 @@
 }
 .message-body {
     display: inline-block;
-    width: 45%;
+    width: auto;
+    min-width: 25%;
+    max-width: 45%;
     border-radius: 15px 15px 15px 2px;
     background-color: #EDEDED;
-    padding: 2%;
+    padding: 1.5%;
     vertical-align: middle;
 }
 .item-message-id p{
@@ -69,10 +71,12 @@
     }
     .message-body-user {
         display: inline-block;
-        width: 45%;
+        width: auto;
+        min-width: 25%;
+        max-width: 45%;
         border-radius: 15px 15px 2px 15px;
         background-color: #0176FF;
-        padding: 2%;
+        padding: 1.5%;
         vertical-align: middle;
     }
     .avatar-message-base {
