--- a/frontend/src/assets/css/message.css
+++ b/frontend/src/assets/css/message.css
@@ -1072,7 +1072,9 @@ video {
 
     .message-body {
         margin: 2% 0 2% 0;
-        width: 70%;
+        width: auto;
+        min-width: 50%;
+        max-width: 80%;
     }
 
     .img-circle.avatar-message {
@@ -1086,7 +1088,9 @@ video {
 
     .message-body-user {
         margin: 2% 2% 2% 0;
-        width: 70%;
+        width: auto;
+        min-width: 50%;
+        max-width: 80%;
     }
 
     .item-message-id {
@@ -1106,63 +1110,3 @@ video {
 }
 
 
-/*@media (max-height: 750px) {*/
-/*    .chat-body {*/
-/*        height: 690px;*/
-/*    }*/
-/*    .container.base-container {*/
-/*        margin-top: 10px;*/
-/*    }*/
-/*    #messages {*/
-/*        margin: 0;*/
-/*        height: 555px;*/
-/*    }*/
-/*    #innerMessages {*/
-/*        height: 550px;*/
-/*    }*/
-
-/*    #message_id\ div {*/
-/*        width: 225px;*/
-/*    }*/
-/*}*/
-
-/*@media (max-height: 675px) {*/
-/*    .chat-body {*/
-/*        height: 600px;*/
-/*    }*/
-/*    .container.base-container {*/
-/*        margin-top: 10px;*/
-/*    }*/
-/*    #messages {*/
-/*        margin: 0;*/
-/*        height: 495px;*/
-/*    }*/
-/*    #innerMessages {*/
-/*        height: 490px;*/
-/*    }*/
-
-/*    #message_id\ div {*/
-/*        width: 185px;*/
-/*    }*/
-/*}*/
-
-/*@media (max-height: 570px) {*/
-/*    .chat-body {*/
-/*        height: 500px;*/
-/*    }*/
-/*    .container.base-container {*/
-/*        margin-top: 10px;*/
-/*    }*/
-/*    #messages {*/
-/*        margin: 0;*/
-/*        height: 405px;*/
-/*    }*/
-/*    #innerMessages {*/
-/*        height: 400px;*/
-/*    }*/
-
-/*    #message_id\ div {*/
-/*        width: 150px;*/
-/*    }*/
-
-/*}*/
