--- a/frontend/src/assets/css/content.css
+++ b/frontend/src/assets/css/content.css
@@ -1526,7 +1526,7 @@ span::after {
 .tabs__list,
 .bottom-menu,
 .block-title-search {
-    background-color: #FBFBFB;
+    background-color: #FFFFFF;
 }
 
 .warm .tabs__list,
